# tfrs-retail-example

./: EDA.ipynb  README.md  TFRS_Demo.ipynb  build.sh  example.ipynb  item_info.csv  pyproject.toml  requirements.txt  user_info.csv
