[tool.poetry]
name = "tfrs-retail-example"
version = "0.1.0"
description = ""
authors = ["Thomas Gaddy <thomasd.gaddy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
tensorflow-recommenders = "0.6.0"
pandas = "1.0.0"
tensorflow-data-validation = "^1.6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
